--- a/3200f24.html
+++ b/3200f24.html
@@ -253,6 +253,21 @@
                                             <div class="module-content col-sm-9">
                                                 <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. For further information, please visit the <a href="http://drc.uga.edu/">Disabilities Resource Center page</a>.</p>
                                             </div>
+                                            <div class="module-block row">
+                                                <div class="module-title col-sm-3 text-right">
+                                                    <h6>Mental health and wellness</h6>
+                                                </div>
+                                                <div class="module-content col-sm-9"><p>
+                                            If you or someone you know needs assistance, you are encouraged to contact Student Care and Outreach in the Division of Student Affairs at 706-542-8479 or visit <a href="https://sco.uga.edu">https://sco.uga.edu</a>. They will help you navigate any difficult circumstances you may be facing by connecting you with the appropriate resources or services. UGA has several resources for a student seeking mental health services (<a href="https://caps.uga.edu/well-being-prevention-programs-mental-health/">https://caps.uga.edu/well-being-prevention-programs-mental-health/</a>) or crisis support (<a href="https://healthcenter.uga.edu/emergencies/">https://healthcenter.uga.edu/emergencies/</a>).
+                   </div>
+                                            </div>
+    
+                                            <div class="module-block row">
+                                                <div class="module-title col-sm-3 text-right">
+                                                    <h6>FERPA Notice</h6>
+                                                </div>
+                                                <div class="module-content col-sm-9"><p>
+                                           The Federal Family Educational Rights and Privacy Act (FERPA) grants students certain information privacy rights. See the registrar’s explanation at <a href="https://reg.uga.edu/general-information/ferpa/">reg.uga.edu/general-information/ferpa/</a>. FERPA allows disclosure of directory information (name, address, telephone, email, major, activities, degrees, awards, prior schools), unless requested in a written letter to the registrar.</p></div></div>
                                         </div>
                                     </div>
                                 </div>
