--- a/3100f24.html
+++ b/3100f24.html
@@ -242,7 +242,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 <h6>Special accommodations</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. For further informati                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. If you
+                                                                                         <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. If you
 plan to request accommodations for a disability, please register with the Disability Resource Center. They can be reached by visiting Clark Howell Hall, calling 706-542-8719 (voice) or 706-542-877 (TTY), or by visiting <a href="http://drc.uga.edu">http://drc.uga.edu</a>.
                                             </div>
                                         </div>
