--- a/3100f24.html
+++ b/3100f24.html
@@ -133,7 +133,7 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10"> Go over syllabus. Introduction to sequences. </span></li>
+                                                <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10"> Go over syllabus [<a href="https://pollack.uga.edu/3100f24/3100Fall2024-syllabus.pdf">static copy here</a>]. Introduction to sequences. </span></li>
                                                 </ul>
                                             </div>
                                         </div>
