--- a/3200f24.html
+++ b/3200f24.html
@@ -134,7 +134,7 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
                                                     
-                                                <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10">Discussion of syllabus. Some &quot;food for thought&quot;.
+                                                <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10">Discussion of syllabus [<a href="https://pollack.uga.edu/3200f24/3200Fall2024-syllabus.pdf">static copy here</a>]. Some &quot;food for thought&quot;.
                                                 </span></li>
                                                 </ul>
                                             </div>
