--- a/3200f24.html
+++ b/3200f24.html
@@ -100,9 +100,14 @@
                                         <div class="course-header bg__proofs">
                                             <div class="course-info col-sm-12 col-md-4 col-lg-3">
                                                 <div class="office">
-                                                    <strong>Office:</strong>
-                                                    <br> 406 Boyd Graduate Studies Building
+                                                    <strong>My office:</strong>
+                                                    <br> 406 Boyd GSRC
                                                 </div>
+                                                <div class="office">
+                                                    <strong>Dahlen's office:</strong>
+                                                    <br> 434F Boyd GSRC
+                                                </div>
+
                                                 <div class="office-hours"><p>
                                              <strong>Office hours:</strong><br>
                                             TBA
@@ -116,6 +121,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
+
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.3 in the course text.</span><span class="col-md-2 due-date">complete by 8/19</span><span class="col-md-1"></span>
+                                                </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Watch your inbox for a class questionnaire. <br> Read sections 1.1 and 1.2 in the course text.</span><span class="col-md-2 due-date">complete by 8/16</span><span class="col-md-1"></span>
                                                     </li>
                                                 </ul>
@@ -133,7 +141,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                    
+                                                <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Statements. Forming new statements from old via AND, NOT, OR, and IMPLIES, and the corresponding truth values.
+                                                    </span></li>
+
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10">Discussion of syllabus [<a href="https://pollack.uga.edu/3200f24/3200Fall2024-syllabus.pdf">static copy here</a>]. Some &quot;food for thought&quot;.
                                                 </span></li>
                                                 </ul>
@@ -213,7 +223,7 @@
                                                 <p>There are two in-class midterm exams as well as a final exam.</p>
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, Sept. 20</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, Nov. 1</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, <del>Nov. 1</del> Nov. 8</li>
                                                     <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (location TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
