--- a/3200f24.html
+++ b/3200f24.html
@@ -141,6 +141,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> Equivalence of compound statements. Verifying equivalence with truth tables. An implication is equivalent to its contrapositive. The converse and inverse are equivalent.
+                                                    </span></li>
+
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Statements. Forming new statements from old via AND, NOT, OR, and IMPLIES, and the corresponding truth values.
                                                     </span></li>
 
