--- a/3200f24.html
+++ b/3200f24.html
@@ -121,7 +121,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
-
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.4 in the course text.</span><span class="col-md-2 due-date">complete by 8/21</span><span class="col-md-1"></span>
+                                                </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.3 in the course text.</span><span class="col-md-2 due-date">complete by 8/19</span><span class="col-md-1"></span>
                                                 </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Watch your inbox for a class questionnaire. <br> Read sections 1.1 and 1.2 in the course text.</span><span class="col-md-2 due-date">complete by 8/16</span><span class="col-md-1"></span>
