--- a/3100f24.html
+++ b/3100f24.html
@@ -118,7 +118,9 @@
                                                 <h6>Current assignments/other course materials</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p> Watch this space!</p>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/26</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+                                            </ul>
                                             </div>
                                         </div>
                                     </div>
@@ -132,7 +134,7 @@
                                                 <h6>Course summary to date (reverse chronological order)</h6>
                                             </div>
                                              <div class="module-content col-sm-9">
-                                                <ul class="course-summary-to-date">
+                                                <ul class="course-summary-to-date"> <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> PMI with a different base case. The Principle of Complete Mathematical Induction.  </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Review of the Principle of Mathematical Induction (PMI). </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10"> Go over syllabus [<a href="https://pollack.uga.edu/3100f24/3100Fall2024-syllabus.pdf">static copy here</a>]. Introduction to sequences. </span></li>
                                                 </ul>
