--- a/3200f24.html
+++ b/3200f24.html
@@ -121,6 +121,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/29</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.4 in the course text.</span><span class="col-md-2 due-date">complete by 8/21</span><span class="col-md-1"></span>
                                                 </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.3 in the course text.</span><span class="col-md-2 due-date">complete by 8/19</span><span class="col-md-1"></span>
