--- a/3200f24.html
+++ b/3200f24.html
@@ -109,8 +109,10 @@
                                                 </div>
 
                                                 <div class="office-hours"><p>
-                                             <strong>Office hours:</strong><br>
-                                            TBA
+                                             <strong>Office hours (Pollack):</strong><br>
+                                            T 2:15-3:15<br>
+                                            W 3:00-5:00<br>
+                                            F 3:00-4:00
                                             </div>
                                         </div>
                                     </div>
