--- a/3200f24.html
+++ b/3200f24.html
@@ -123,6 +123,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
+                                                
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read Chapter 2 in the course text.</span><span class="col-md-2 due-date">complete by 8/23</span><span class="col-md-1"></span>
+                                                </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 1.4 in the course text.</span><span class="col-md-2 due-date">complete by 8/21</span><span class="col-md-1"></span>
@@ -146,6 +149,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/21</span><span class="course-task col-md-10"> Recap of implications, converse, inverese, and contrapositive. Quantifiers. Negations.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> Equivalence of compound statements. Verifying equivalence with truth tables. An implication is equivalent to its contrapositive. The converse and inverse are equivalent.
                                                     </span></li>
 
