--- a/3200f24.html
+++ b/3200f24.html
@@ -100,11 +100,11 @@
                                         <div class="course-header bg__proofs">
                                             <div class="course-info col-sm-12 col-md-4 col-lg-3">
                                                 <div class="office">
-                                                    <strong>My office:</strong>
+                                                    <strong>Pollack's office:</strong>
                                                     <br> 406 Boyd GSRC
                                                 </div>
                                                 <div class="office">
-                                                    <strong>Dahlen's office:</strong>
+                                                    <strong>Dahlen Elstran's office:</strong>
                                                     <br> 434F Boyd GSRC
                                                 </div>
 
@@ -112,8 +112,14 @@
                                              <strong>Office hours (Pollack):</strong><br>
                                             T 2:15-3:15<br>
                                             W 3:00-5:00<br>
-                                            F 3:00-4:00
+                                            F 3:00-4:00<br>
+                                            <p>
+                                            <strong>Office hour (Elstran):</strong><br>
+                                            M 1:00-2:00 
+                                            </p>
                                             </div>
+
+
                                         </div>
                                     </div>
                                     <div class="card__body boxed boxed--lg bg--white">
