--- a/3100f24.html
+++ b/3100f24.html
@@ -137,9 +137,12 @@
                                                 <h6>Course summary to date (reverse chronological order)</h6>
                                             </div>
                                              <div class="module-content col-sm-9">
-                                                <ul class="course-summary-to-date"> <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> PMI with a different base case. The Principle of Complete Mathematical Induction.  </span></li>
+                                                <ul class="course-summary-to-date"> 
+                                                <li class="with-bullet"><span class="course-date col-sm-1">8/21</span><span class="course-task col-md-10"> Sequences as functions. The notions of increasing, decreasing, and monotone. If $\{a_n\}$ is increasing, and $n$ and $m$ are natural numbers with $n\le m$, then $a_n \le a_m$. Bounded above, bounded below, and bounded.</span></li>
+                                                <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> PMI with a different base case. The Principle of Complete Mathematical Induction.  </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Review of the Principle of Mathematical Induction (PMI). </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/14</span><span class="course-task col-md-10"> Go over syllabus [<a href="https://pollack.uga.edu/3100f24/3100Fall2024-syllabus.pdf">static copy here</a>]. Introduction to sequences. </span></li>
+                                                
                                                 </ul>
                                             </div>
                                         </div>
