--- a/3200f24.html
+++ b/3200f24.html
@@ -155,6 +155,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/23</span><span class="course-task col-md-10"> Direct proof, proof by contrapositive, proof by contradiction. Parity proofs.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/21</span><span class="course-task col-md-10"> Recap of implications, converse, inverese, and contrapositive. Quantifiers. Negations.
                                                     </span></li>
 
