--- a/3100f24.html
+++ b/3100f24.html
@@ -138,6 +138,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date"> 
+                                                
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/23</span><span class="course-task col-md-10"> $\{a_n\}$ is bounded if and only if there is a real number $M\ge 0$ with $-M\le a_n\le M$ for all $n$. Informal and formal definitions of a subsequence.  A subsequence of an increasing sequence is increasing.</span></li>    
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/21</span><span class="course-task col-md-10"> Sequences as functions. The notions of increasing, decreasing, and monotone. If $\{a_n\}$ is increasing, and $n$ and $m$ are natural numbers with $n\le m$, then $a_n \le a_m$. Bounded above, bounded below, and bounded.</span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/19</span><span class="course-task col-md-10"> PMI with a different base case. The Principle of Complete Mathematical Induction.  </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Review of the Principle of Mathematical Induction (PMI). </span></li>
