--- a/3200f24.html
+++ b/3200f24.html
@@ -130,6 +130,9 @@
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
                                                 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">due 9/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read Chapter 2 in the course text.</span><span class="col-md-2 due-date">complete by 8/23</span><span class="col-md-1"></span>
                                                 </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
