--- a/3200f24.html
+++ b/3200f24.html
@@ -158,6 +158,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/28</span><span class="course-task col-md-10"> More inequality proofs. Group work on $\sqrt{2}$ being irrational.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/26</span><span class="course-task col-md-10"> More on parity proofs. Inequality proofs.
                                                     </span></li>
 
