--- a/3200f24.html
+++ b/3200f24.html
@@ -129,7 +129,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list">
-                                                
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read Chapter 5 in the text.</span><span class="col-md-2 due-date">complete by 9/4</span>
+                                                </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">due 9/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -158,6 +160,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/30</span><span class="course-task col-md-10"> Wrap up of $\sqrt{2}$ being irrational. More practice with inequalities.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/28</span><span class="course-task col-md-10"> More inequality proofs. Group work on $\sqrt{2}$ being irrational.
                                                     </span></li>
 
