--- a/3200f24.html
+++ b/3200f24.html
@@ -160,6 +160,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/4</span><span class="course-task col-md-10"> Wrap up of the wrap up problem. Introduction to induction.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/30</span><span class="course-task col-md-10"> Wrap up of $\sqrt{2}$ being irrational. More practice with inequalities.
                                                     </span></li>
 
