--- a/3100f24.html
+++ b/3100f24.html
@@ -139,7 +139,9 @@
                                                 <h6>Course summary to date (reverse chronological order)</h6>
                                             </div>
                                              <div class="module-content col-sm-9">
-                                                <ul class="course-summary-to-date"> 
+                                                <ul class="course-summary-to-date"> <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> 
+                                                    Convergent sequences are bounded. Every subsequence of a convergent sequence converges to the original limit. Start of discussion of geometric sequences. </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/4</span><span class="course-task col-md-10"> Two more explicit limit examples. </span></li>    
 
 
@@ -212,7 +214,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                             <div class="module-content col-sm-9">
                                                 <p>There are three in-class midterm exams as well as a final exam.</p>
                                                 <ul>
-                                                    <li class="with-bullet">Midterm #1: Friday, September 13</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, <del>September 13</del> September 20</li>
                                                     <li class="with-bullet">Midterm #2: Friday, October 11</li>
                                                     <li class="with-bullet">Midterm #3: Monday, November 18</li>
                                                     <li class="with-bullet">Final exam: Fri, December 6, 12:00-3 PM (TBA)</li>
