announce new book

--- a/index.html
+++ b/index.html
@@ -235,6 +235,27 @@
                                                             </div>
                                                         </div>
                                                     </li>
+
+                                                    <li class="col-md-12 list-item with-bullet">
+                                                        <div class="col-sm-4 col-md-3 book-thumb"><img src="img/UnrealCover.jpg" alt=""></div>
+                                                        <div class="col-sm-8 col-md-9">
+                                                            <h4>    <span class="book-title">Unreal Analysis</span>
+                                                            </h4> <p>
+                                                                <span> Ross Mathematics Program Foundation (2024)<p>
+                                                             <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Coming soon!</small></p> </span></p>
+                                                            <!-- <div class="book-buttons">
+                                                                <a class="btn btn--md bg--standard bg--download no-border-radius" href="analyticproblembook_TOC.pdf">
+                                                                    <span class="btn__text"><i class="pp-icon-download"></i>Preface/TOC</span>
+                                                                </a>
+                                                                        <a class="btn btn--md bg--standard bg--download no-border-radius" href="steps1to5.pdf">
+                                                                    <span class="btn__text"><i class="pp-icon-download"></i>Sample</span>
+                                                                </a>
+                                                                <a class="btn btn--md bg--standard bg--purchase no-border-radius" href="https://www.springer.com/gp/book/9783030650766">                                                          <span class="btn__text"><i class="pp-icon-cart"></i>Purchase</span>
+                                                                </a>
+                                                            </div> -->
+                                                        </div>
+                                                    </li>
+
                                                 </ul>
 
                                             </div>
