--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                                     <li class="col-md-12 list-item with-bullet">
                                                         <div class="col-sm-4 col-md-3 book-thumb"><img src="img/UnrealCover.jpg" alt=""></div>
                                                         <div class="col-sm-8 col-md-9">
-                                                            <h4>    <span class="book-title">Unreal Analysis</span>
+                                                            <h4>    <span class="book-title">Unreal Analysis: Visions of the $p$-adic Realm</span>
                                                             </h4> <p>
                                                                 <span> Ross Mathematics Program Foundation (2024)<p>
                                                              <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Coming soon!</small></p> </span></p>
