--- a/3100f24.html
+++ b/3100f24.html
@@ -121,6 +121,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3</span><span class="col-md-2 due-date">due 9/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">due 9/6</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/26</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -139,7 +143,10 @@
                                                 <h6>Course summary to date (reverse chronological order)</h6>
                                             </div>
                                              <div class="module-content col-sm-9">
-                                                <ul class="course-summary-to-date"> <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> 
+                                                <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10"> 
+                                                        Limit laws: Sum rule, difference rule, product rule. Start of discussion of quotient rule. Review of (bounded)*(going to zero) goes to zero. </span></li>    
+                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> 
                                                     Convergent sequences are bounded. Every subsequence of a convergent sequence converges to the original limit. Start of discussion of geometric sequences. </span></li>    
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/4</span><span class="course-task col-md-10"> Two more explicit limit examples. </span></li>    
