add maximally paper

--- a/research.html
+++ b/research.html
@@ -2867,6 +2867,25 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 
                 <li class="col-sm-12 list-item with-bullet">
                     <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Maximally elastic quadratic fields</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maximallyelastic.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper145" aria-expanded="false" aria-controls="paper145">Abstract</a>
+                            <div class="collapse" id="paper145">
+                                <div class="well paper-abtract-content">
+                                    <p>  <p> Recall that for a domain $R$ where every nonzero nonunit factors into irreducibles, the <i>elasticity</i> of $R$ is defined as $$\sup\left\{\frac{s}{r}: \pi_1\cdots \pi_r = \rho_1\cdots \rho_s, \text{ with all $\pi_i, \rho_j$ irreducible}\right\}.$$ We call a quadratic field $K$ <i>maximally elastic</i> if the ring of integers of $K$ is a UFD and each element of $\{1, \frac{3}{2}, 2, \frac{5}{2}, 3, \dots\} \cup \{\infty\}$ appears as an elasticity of infinitely many orders inside $K$. This corresponds to the orders in $K$ exhibiting, to the extent possible for a quadratic field, maximal variation in terms of the failure of unique factorization. Assuming the Generalized Riemann Hypothesis, we prove that $K= \mathbb{Q}(\sqrt{2})$ is maximally elastic, and we provide evidence for a conjectured characterization of maximally elastic quadratic fields.</p> </p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
                         <h4>    <span class="paper-title">Review of: <span class="underline">Excursions in Number Theory, Algebra, and Analysis</span>, by Kenneth Ireland and Al Cuoco</span>  <span class="paper-author"></span>          </h4>
                         <p>
                             <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> (<span class="paper-year">to appear</span>)</p>
@@ -2906,13 +2925,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Maximally elastic quadratic fields</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maximallyelastic.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
