--- a/3100f24.html
+++ b/3100f24.html
@@ -144,6 +144,11 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/13</span><span class="course-task col-md-10"> 
+                                                        Completion of quotient test. Diverging to $\infty$ and $-\infty$. A ratio test for sequences.</span></li>    
+                                                    
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10"> 
                                                         Limit laws: Sum rule, difference rule, product rule. Start of discussion of quotient rule. Review of (bounded)*(going to zero) goes to zero. </span></li>    
                                                          <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> 
