update exam date

--- a/3200f24.html
+++ b/3200f24.html
@@ -275,7 +275,7 @@
                                             <div class="module-content col-sm-9">
                                                 <p>There are two in-class midterm exams as well as a final exam.</p>
                                                 <ul>
-                                                    <li class="with-bullet">Midterm #1: Friday, Sept. 20</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, <del>Sept. 20</del> Sept. 27</li>
                                                     <li class="with-bullet">Midterm #2: Friday, <del>Nov. 1</del> Nov. 8</li>
                                                     <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (location TBA)</li>
                                                 </ul>
