--- a/3200f24.html
+++ b/3200f24.html
@@ -129,6 +129,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
+
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read sections 4.1--4.3 in the text.</span><span class="col-md-2 due-date">complete by 9/20</span>
+                                                </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3</span><span class="col-md-2 due-date">due 9/25</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -163,6 +167,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> Strong induction, continued.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/16</span><span class="course-task col-md-10"> Strong induction, continued.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/13</span><span class="course-task col-md-10"> Start of strong induction. 
