--- a/3100f24.html
+++ b/3100f24.html
@@ -147,6 +147,12 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> 
+                                                    Peak indices. The Bolzano--Weierstrass theorem: Every bounded sequence has a convergent subsequence. Start of discussion of Cauchy sequences.
+                                                    </span></li>    
+                                                    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/16</span><span class="course-task col-md-10"> 
                                                     Wrap up of limit laws. Start of discussion of &quot;what is reality.&quot; The completness axiom: every bounded, monotone sequence of real numbers converges to a real number limit. $\sqrt{2} \in \mathbb{R}$. Statement of intermediate value theorem. </span></li>    
                                                 
