--- a/3200f24.html
+++ b/3200f24.html
@@ -129,6 +129,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read sections 4.1--4.3 in the text.</span><span class="col-md-2 due-date">complete by 9/20</span>
                                                 </li>
@@ -167,6 +170,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/20</span><span class="course-task col-md-10"> 
+                                                        More on strong induction. 
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> Strong induction, continued.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/16</span><span class="course-task col-md-10"> Strong induction, continued.
