--- a/3200f24.html
+++ b/3200f24.html
@@ -170,6 +170,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/25</span><span class="course-task col-md-10"> 
+                                                        Fundamental set definitions, continued. Discussion of how to show $A \subseteq B$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/23</span><span class="course-task col-md-10"> 
                                                         Uga nuggets. Start of discussion of sets.
                                                     </span></li>
