--- a/3100f24.html
+++ b/3100f24.html
@@ -151,7 +151,18 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/30</span><span class="course-task col-md-10"> 
+                                                        Proof of the LUB property of $\mathbb{R}$. Introduction to series.
+                                                        </span></li>    
 
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">9/23</span><span class="course-task col-md-10"> 
+                                                            Cauchy sequences converge. A sequence of real numbers converges to a real number if and only if it is a Cauchy sequence. Introduction to Least Upper  Bounds.
+                                                        </span></li>    
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">9/20</span><span class="course-task col-md-10"> 
+                                                            Exam!
+                                                            </span></li>    
+                                                        
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> 
                                                     Peak indices. The Bolzano--Weierstrass theorem: Every bounded sequence has a convergent subsequence. Start of discussion of Cauchy sequences.
                                                     </span></li>    
