--- a/3100f24.html
+++ b/3100f24.html
@@ -122,7 +122,7 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4
-                                                    </span><span class="col-md-2 due-date">due 10/2</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </span><span class="col-md-2 due-date">due <del>10/2</del> 10/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam 
