--- a/3200f24.html
+++ b/3200f24.html
@@ -170,6 +170,14 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> 
+                                                        Proving equality through element chasing. Venn diagrams. Pass back exams and HW #3.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/2</span><span class="course-task col-md-10"> 
+                                                        Exam.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/30</span><span class="course-task col-md-10"> 
                                                         Set equality. Set operations: intersection, union, set subtraction, complements (relative to an overarching/universal set).
                                                     </span></li>
