--- a/3100f24.html
+++ b/3100f24.html
@@ -151,6 +151,11 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> 
+                                                        Completion of discussion of geometric series. Constant multiple and sum rules for series. Basic comparison test.
+                                                        </span></li>    
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/2</span><span class="course-task col-md-10"> 
                                                         Convergence of $\sum 1/k^2$. Divergence of $\sum 1/k$ (harmonic series). The $k$th term test for divergence. Start of discussion of geometric series.
                                                         </span></li>    
