--- a/3200f24.html
+++ b/3200f24.html
@@ -170,6 +170,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/7</span><span class="course-task col-md-10"> 
+                                                        More practice proving set equality through element chasing. Start of &quot;beyond element chasing&quot;.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> 
                                                         Proving equality through element chasing. Venn diagrams. Pass back exams and HW #3.
                                                     </span></li>
