--- a/3100f24.html
+++ b/3100f24.html
@@ -151,6 +151,11 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/7</span><span class="course-task col-md-10"> 
+                                                        Eventual Comparison Test. Limit Comparison Test. Statement of Integral Comparison Test and application to $p$-series test.
+                                                        </span></li>    
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/4</span><span class="course-task col-md-10"> 
                                                         Completion of discussion of geometric series. Constant multiple and sum rules for series. Basic comparison test.
                                                         </span></li>    
