--- a/3100f24.html
+++ b/3100f24.html
@@ -270,7 +270,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 <p>There are three in-class midterm exams as well as a final exam.</p>
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, <del>September 13</del> September 20</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, October 11</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, <del>October 11</del> October 18</li>
                                                     <li class="with-bullet">Midterm #3: Monday, November 18</li>
                                                     <li class="with-bullet">Final exam: Fri, December 6, 12:00-3 PM (TBA)</li>
                                                 </ul>
