--- a/index.html
+++ b/index.html
@@ -242,17 +242,15 @@
                                                             <h4>    <span class="book-title">Unreal Analysis: Visions of the $p$-adic Realm</span>
                                                             </h4> <p>
                                                                 <span> Ross Mathematics Program Foundation (2024)<p>
-                                                             <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Coming soon!</small></p> </span></p>
-                                                            <!-- <div class="book-buttons">
-                                                                <a class="btn btn--md bg--standard bg--download no-border-radius" href="analyticproblembook_TOC.pdf">
-                                                                    <span class="btn__text"><i class="pp-icon-download"></i>Preface/TOC</span>
+                                                             <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Open source! Report typos as issues at the <a href="https://github.com/PPPollack/Unreal-Analysis/">github repo</a>.</small></p> </span></p>
+                                                            <div class="book-buttons">
+                                                                
+                                                                    <a class="btn btn--md bg--standard bg--download no-border-radius" href="https://raw.githubusercontent.com/PPPollack/Unreal-Analysis/main/padic-current.pdf">
+                                                                    <span class="btn__text"><i class="pp-icon-download"></i>Download</span>
                                                                 </a>
-                                                                        <a class="btn btn--md bg--standard bg--download no-border-radius" href="steps1to5.pdf">
-                                                                    <span class="btn__text"><i class="pp-icon-download"></i>Sample</span>
+                                                                <a class="btn btn--md bg--standard bg--purchase no-border-radius" href="https://a.co/d/1PbHW1I">                                                          <span class="btn__text"><i class="pp-icon-cart"></i>Purchase</span>
                                                                 </a>
-                                                                <a class="btn btn--md bg--standard bg--purchase no-border-radius" href="https://www.springer.com/gp/book/9783030650766">                                                          <span class="btn__text"><i class="pp-icon-cart"></i>Purchase</span>
-                                                                </a>
-                                                            </div> -->
+                                                            </div>
                                                         </div>
                                                     </li>
 
