--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                                             <h4>    <span class="book-title">Unreal Analysis: Visions of the $p$-adic Realm</span>
                                                             </h4> <p>
                                                                 <span> Ross Mathematics Program Foundation (2024)<p>
-                                                             <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Open source! Report typos as issues at the <a href="https://github.com/PPPollack/Unreal-Analysis/">github repo</a>.</small></p> </span></p>
+                                                             <small>Problem-based introduction to the theory of $p$-adic numbers. Based on an Advanced Course taught at the 2024 Ross Indiana program. Report typos as issues at the <a href="https://github.com/PPPollack/Unreal-Analysis/">github repo</a>.</small></p> </span></p>
                                                             <div class="book-buttons">
                                                                 
                                                                     <a class="btn btn--md bg--standard bg--download no-border-radius" href="https://raw.githubusercontent.com/PPPollack/Unreal-Analysis/main/padic-current.pdf">
