--- a/3100f24.html
+++ b/3100f24.html
@@ -160,6 +160,11 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/14</span><span class="course-task col-md-10"> 
+                                                        Absolute vs conditional convergence. Statement of ratio test and examples.
+                                                        </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/11</span><span class="course-task col-md-10"> 
                                                         Absolute convergence. Absolute convergence implies convergence. Alternating series test.
                                                         </span></li>    
