--- a/3100f24.html
+++ b/3100f24.html
@@ -161,6 +161,10 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> 
+                                                        Proof of ratio test. A mathematical magic trick. Statement of Riemann's rearrangement theorem.
+                                                        </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/14</span><span class="course-task col-md-10"> 
                                                         Absolute vs conditional convergence. Statement of ratio test and examples.
                                                         </span></li>    
