--- a/3200f24.html
+++ b/3200f24.html
@@ -179,6 +179,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> 
+                                                        Formulas for $|A\cup B \cup C|$ and $|A\cup B \cup C \cup D|$. Counting integers $1\le n \le 105$ divisible by $3, 5$, or $7$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/14</span><span class="course-task col-md-10"> 
                                                         Identities for product sets with element chasing. Formulas for $|A\cup B|$ and $|A\cup B \cup C|$.
                                                     </span></li>
