--- a/3200f24.html
+++ b/3200f24.html
@@ -130,6 +130,9 @@
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 5.1.</span><span class="col-md-2 due-date">complete by 10/25</span>
+                                                </li>
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due 10/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -179,6 +182,15 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/21</span><span class="course-task col-md-10"> 
+                                                       More on power sets.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/18</span><span class="course-task col-md-10"> 
+                                                        Introduction to power sets. Proving identities involving power sets.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> 
                                                         Formulas for $|A\cup B \cup C|$ and $|A\cup B \cup C \cup D|$. Counting integers $1\le n \le 105$ divisible by $3, 5$, or $7$.
                                                     </span></li>
